plugins {
    id 'org.springframework.boot' version '1.5.9.RELEASE'
    id 'java'
}

group 'khasanov.payu'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

bootRepackage {
    mainClass = 'khasanov.payu.shorturl.Application'
}

repositories {
    jcenter()
}

dependencies {
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb'
    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8'

    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
}
